# streetsat

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  STREETSAT_PROMPT_COMPLETO (1).md:Zone.Identifier  STREETSAT_PROMPT_COMPLETO.md  docker-compose.yml  output.json  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements-lambda.txt  requirements.txt  serverless.yml
.github/workflows/: ci.yml
.specs/: README.md
.specs/fase-1-treino-modelo/: TODO.md
.specs/fase-2-coleta-tempo-real/: TODO.md
.specs/fase-3-nlp-comprehend/: TODO.md
.specs/fase-4-inferencia-roteamento/: TODO.md
.specs/fase-5-dashboard-alertas/: TODO.md
.specs/fase-6-lambda-producao/: TODO.md
.specs/fase-7-landing-admin-frontend/: LANDING-REDESIGN-SPEC.md  TODO.md
aws/lambda/: handler_alerts.py  handler_inference.py  handler_scraper.py
dashboard/: app.py  callbacks.py  config.py
dashboard/assets/: style.css
dashboard/layouts/: alerts.py  main.py  risk_map.py  statistics.py
models/: model_metadata.json
scripts/: collect_realtime.py  dataset_report.py  demo_dashboard.py  demo_inference.py  demo_nlp.py  enrich_occurrences.py  train_model.py
src/alerts/: alert_factory.py  sns_notifier.py
src/api/: fastapi_app.py
src/apis/: api_client.py  nasa_eonet.py  nasa_firms.py  nasa_power.py  weather.py
src/core/: config.py  constants.py  exceptions.py
src/data/: artesp_loader.py  blockage_parser.py  data_cleaner.py  feature_engineering.py  prf_loader.py  road_encoder.py  victims_parser.py
src/db/: postgres.py  redis_client.py
tests/: conftest.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
(+105 files in other folders)
