[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "streetsat"
version = "1.0.0"
description = "Monitoramento inteligente de rotas via satélite e IA"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "joblib>=1.3",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "geopandas>=0.14",
    "shapely>=2.0",
    "geopy>=2.4",
    "networkx>=3.2",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "boto3>=1.34",
    "botocore>=1.34",
    "redis>=5.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "motor>=3.3",
    "pymongo>=4.6",
    "plotly>=5.20",
    "dash>=2.16",
    "dash-bootstrap-components>=1.6",
    "folium>=0.16",
    "apscheduler>=3.10",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "isort>=5.13",
    "flake8>=7.0",
    "mypy>=1.9",
    "factory-boy>=3.3",
    "responses>=0.25",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
